@@ -56,7 +56,6 @@ public:
         defaultWaveLevel.RootNote=0;
         defaultWaveLevel.SamplesPerSec=0;
         mdkHelper=NULL;
-        ClearAuxBuffer();
     }
     BuzzMachineCallbacks(CMachine *_machine, CMachineInterface *_machine_interface,CMachineInfo *_machine_info) {
         machine=_machine;
@@ -70,7 +69,6 @@ public:
         defaultWaveLevel.RootNote=0;
         defaultWaveLevel.SamplesPerSec=0;
         mdkHelper=NULL;
-        ClearAuxBuffer();
     }
 
     CWaveInfo const *GetWave(int const i);
