@@ -52,7 +52,6 @@ public:
         defaultWaveLevel.RootNote=0;
         defaultWaveLevel.SamplesPerSec=0;
         mdkHelper=NULL;
-        ClearAuxBuffer();
     }
     BuzzMachineCallbacksPre12(CMachine *_machine, CMachineInterface *_machine_interface,CMachineInfo *_machine_info) {
         machine=_machine;
@@ -65,7 +64,6 @@ public:
         defaultWaveLevel.RootNote=0;
         defaultWaveLevel.SamplesPerSec=0;
         mdkHelper=NULL;
-        ClearAuxBuffer();
     }
 
     CWaveInfo const *GetWave(int const i);
