@@ -1,3 +1,12 @@
+2008-02-19  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
+	  Reorder init calls.
+
+	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
+	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
+	  No need to clear auxuffer.
+
 2008-02-18  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
